# blagger

./: .gitignore  CMakeLists.txt  Makefile  README.md  blagger.c  blagger.sln  blagger.vcxproj  globals.c  input.c  level.c  level.h  render.c  render.h  types.h  update.c
data/: CROWN.MOD
src/: blagger.c  globals.c  globals.h  input.c  input.h  level.c  level.h  render.c  render.h  types.h  update.c  update.h
win/: blagger.vcxproj
